--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^13.3.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3"
   }
